--- a/djcrm/leads/templates/leads/lead_list.html
+++ b/djcrm/leads/templates/leads/lead_list.html
@@ -18,6 +18,8 @@
 
 </head>
 <body>
+    <a href="/leads/create/"> Create a new lead </a>
+    <hr/>
  <h1>This is our all leads list</h1>
  
  {% for lead in leads %}
