--- a/djcrm/leads/templates/leads/lead_create.html
+++ b/djcrm/leads/templates/leads/lead_create.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=\, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
     <style>
@@ -18,7 +18,7 @@
 
 </head>
         <body>
-            <a href="/leads"> Go back to leads </a>
+            <a href="{% url 'leads:lead-list' %}"> Go back to leads </a>
             <hr/>
             
         <h1> Create a new lead </h1>
