--- a/djcrm/leads/templates/leads/lead_update.html
+++ b/djcrm/leads/templates/leads/lead_update.html
@@ -18,19 +18,17 @@
 
 </head>
         <body>
-            <a href="{% url 'leads:lead-list' %}"> Go back to leads </a>
+            <a href="{% url 'leads:lead-detail' lead.pk %}"> Go back to {{ lead.first_name }}  {{ lead.last_name }}  </a>
             <hr/>
             
-        <h1>This is the detail of {{ lead.first_name }} {{ lead.last_name }}  </h1>
-        <p>This person age: {{ lead.age }}</p>
-        <p>The agent responsible for this lead is {{ lead.agent }} </p>
+        <h1> Update lead: {{ lead.first_name }}  {{ lead.last_name }}   </h1>
+        
+            <form method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit"> Submit </button>
 
-        <hr/>
-
-        <a href="{% url 'leads:lead-update' lead.pk %}">Update</a>
-        <a href="{% url 'leads:lead-delete' lead.pk %}">Delete</a>
-
-
+            </form>
 
         
         </body>
