--- a/djcrm/leads/templates/leads/lead_create.html
+++ b/djcrm/leads/templates/leads/lead_create.html
@@ -1,24 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+{% extends "base.html" %} 
+ 
+    {% block content %}
+  
 
-    <style>
-        .lead{
-            padding: 10px 10px 6px 6px;
-            margin-top: 10px;
-            background-color: #f6f6f6;
-            width: 100%;
-
-        }
-    </style>
-
-</head>
-        <body>
-            <a href="{% url 'leads:lead-list' %}"> Go back to leads </a>
+        <a href="{% url 'leads:lead-list' %}"> Go back to leads </a>
             <hr/>
             
         <h1> Create a new lead </h1>
@@ -29,7 +14,5 @@
                 <button type="submit"> Submit </button>
 
             </form>
-
-        
-        </body>
-</html>
+            
+    {% endblock content %}
